templates_lec10-ignore/sample3/sample3-ec2.yml
# 参照元(https://cloud5.jp/saitou-cfn-template-ec2/)

AWSTemplateFormatVersion: "2010-09-09"

Description:
  Create SecurityGroups and EC2

#---------------------------------------------------------

Parameters:

  PJPrefix:
    Type: String
    Default: cfn

  MyLocalIP:
    Type: String
    Default: 0.0.0.0/0

  myKeyName:
    Type: "AWS::EC2::KeyPair::KeyName"

#---------------------------------------------------------

Resources:

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 SG
      VpcId: !ImportValue VPC-ID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyLocalIP
      GroupName: !Sub ${AWS::StackName}-sg
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-sg

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0d889f77081190db1
      InstanceType: t2.micro
      KeyName: !Ref myKeyName
      NetworkInterfaces:
        - SubnetId: !ImportValue PublicSubnet-C-ID
          GroupSet:
            - !Ref EC2SecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex : 0
      IamInstanceProfile: !ImportValue S3AccessRole
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-EC2

#-----------------------------------------------------------

Outputs:

  EC2SecurityGroupID:
    Value: !Ref EC2SecurityGroup
    Export:
      Name: EC2SecurityGroup-ID

  EC2InstanceID:
    Value: !Ref EC2Instance
    Export:
      Name: EC2Instance-ID
